--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -1,1 +1,20 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: myapp
+spec:
+  selector:
+    matchLabels:
+      app: myapp
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: myapp
+        image: eliasrayan/nginx-demo:1.0.0
+        ports:
+        - containerPort: 80
 
